--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,7 @@
     id: 4F4EA0AAE5267A6C
     state: present
   when: ansible_distribution_release == 'xenial' and php__version == '5.6'
+  tags: [ provision ]
 
 - name: "Add Ondřej Surý PPA repository"
   apt_repository:
@@ -18,6 +19,7 @@
     state: present
     update_cache: yes
   when: ansible_distribution_release == 'xenial' and php__version == '5.6'
+  tags: [ provision ]
 
 - name: Make sure PHP-FPM support is installed
   apt:
@@ -25,6 +27,7 @@
     state: 'latest'
     install_recommends: no
   with_items: [ 'fpm', 'cli' ]
+  tags: [ provision ]
 
 - name: Make sure that Ansible local facts directory is present
   file:
@@ -58,6 +61,7 @@
     - '{{ php__group_packages }}'
     - '{{ php__host_packages }}'
   notify: ['Restart php-fpm']
+  tags: [ provision ]
 
 - name: "Create directory for php*-fpm logs"
   file:
