DRUPSIBLE-261 Added provision tags
Skipping restart/reload php-fpm when packer is invoking.

Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,8 +4,10 @@
   service:
     name: "php{{ php__version }}-fpm"
     state: restarted
+  when: not packer|default(False)|bool
 
 - name: "Reload php-fpm"
   service:
     name: "php{{ php__version }}-fpm"
     state: reloaded
+  when: not packer|default(False)|bool
