DRUPSIBLE-235 Added php-fpm to the init system of phusion.
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -144,3 +144,26 @@
   when: php__manage_pools|default(True)|bool
 
 - meta: flush_handlers
+  when: not php__in_container|d(False)|bool
+
+- name: Test if using a phusion image
+  stat:
+    path: "/sbin/my_init"
+  register: php__my_init_output
+  when: php__in_container|d(False)|bool
+  tags: [ provision ]
+
+- name: Make sure /etc/service/php-fpm exists
+  file:
+    path: /etc/service/php-fpm
+    state: directory
+  when: php__in_container|d(False)|bool and php__my_init_output.stat.exists
+  tags: [ provision ]
+
+- name: Install php-fpm at boot
+  template:
+    src: etc/service/php-fpm-init.sh
+    dest: /etc/service/php-fpm/run
+    mode: "a+x"
+  when: php__in_container|d(False)|bool and php__my_init_output.stat.exists
+  tags: [ provision ]
