--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -162,21 +162,5 @@
 - meta: flush_handlers
   when: not php__in_container|d(False)|bool
 
-- name: Test if using a phusion image
-  stat:
-    path: "/sbin/my_init"
-  register: php__my_init_output
+- include: docker.yml
   when: php__in_container|d(False)|bool
-
-- name: Make sure /etc/service/php-fpm exists
-  file:
-    path: /etc/service/php-fpm
-    state: directory
-  when: php__in_container|d(False)|bool and php__my_init_output.stat.exists
-
-- name: Install php-fpm at boot
-  template:
-    src: etc/service/php-fpm-init.sh
-    dest: /etc/service/php-fpm/run
-    mode: "a+x"
-  when: php__in_container|d(False)|bool and php__my_init_output.stat.exists
