--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -19,3 +19,7 @@
     dest: /etc/service/php-fpm/run
     mode: "a+x"
   when: php__my_init_output.stat.exists
+
+- name: Stop service
+  command: service php{{ php__version }}-fpm stop
+  when: varnish_my_init_output.stat.exists
